[main] fixed wrong padding at button component

--- a/src/widget/card-product/ui/card/styles.module.sass
+++ b/src/widget/card-product/ui/card/styles.module.sass
@@ -1,5 +1,5 @@
 .wrapper
-  padding: 20px
+  padding: 20px 20px 30px
   display: flex
   flex-direction: column
   align-content: start
